# ros2.humble.amr.avalue

./: .gitignore  LICENSE  README.md  avalue_ros2_humble.rviz
aruco_ros-humble-devel/aruco/: CMakeLists.txt
aruco_ros-humble-devel/aruco_ros/: CMakeLists.txt
auto_recharge_ros2/: package.xml  setup.py
auto_recharge_ros2/auto_recharge_ros2/: auto_recharger.py
avalue_aiui/: CMakeLists.txt  package.xml
avalue_aiui/AIUI/cfg/: aiui.cfg
avalue_aiui/include/: PCMPlayer.h  Processor.h  clipp.h
avalue_aiui/include/aiui/: AIUI.h  AIUIConstant.h  AIUIErrorCode.h  AIUIType.h  AIUI_C.h  AIUI_V2.h  PcmPlayer.h  PcmPlayer_C.h
avalue_aiui/launch/: aiui_start.launch.py
avalue_aiui/src/: AudioListenThread.cpp  PCMPlayer.cpp  Processor.cpp
avalue_aiui/src/jsoncpp/: json_batchallocator.h  json_reader.cpp  json_tool.h  json_value.cpp  json_writer.cpp
avalue_aiui/src/jsoncpp/json/: assertions.h  autolink.h  reader.h  value.h  writer.h
avalue_aiui/src/utils/: Base64Util.cpp  Base64Util.h  ConvertUtil.cpp  ConvertUtil.h  IatResultUtil.cpp  IatResultUtil.h  StreamNlpTtsHelper.h
avalue_gps/: avalue_gnss.sh  readme.txt
avalue_gps/avalue_dual_rtk_driver/: package.xml  setup.cfg  setup.py
avalue_gps/avalue_gps_driver/: CMakeLists.txt  package.xml
avalue_imu/yesense_ros2/: avalue_udev.sh
avalue_joy/: CMakeLists.txt  package.xml
avalue_joy/launch/: avalue_joy.launch.py  only_joy.launch.py
avalue_joy/src/: avalue_joy_control.cpp
avalue_path_follow/: CMakeLists.txt  package.xml
avalue_path_follow/launch/: follow_path.launch.py  save_path.launch.py
avalue_path_follow/scripts/: follow_path.py
avalue_path_follow/src/: save_path.cpp
avalue_robot_kcf/: CMakeLists.txt  package.xml
avalue_robot_kcf/launch/: avalue_robot_kcf.launch.py
avalue_robot_kcf/src/: PID.cpp  fhog.cpp  kcftracker.cpp  run_tracker.cpp
avalue_robot_keyboard/: package.xml  setup.cfg  setup.py
avalue_robot_keyboard/avalue_robot_keyboard/: avalue_keyboard.py
avalue_robot_msg/: CMakeLists.txt  package.xml
avalue_robot_nav2/: CMakeLists.txt  package.xml
avalue_robot_nav2/launch/: avalue_robot_nav2.launch.py  save_map.launch.py
avalue_robot_nav2/map/: avalue.yaml
avalue_robot_rrt2/: CMakeLists.txt  package.xml
avalue_robot_rrt2/config/: nav2_params.yaml
avalue_robot_rrt2/launch/navigation/: nav2_bringup_launch.py  nav2_localization_launch.py  nav2_navigation_launch.py  nav2_slam_launch.py
avalue_robot_rrt2/launch/rrt_exploration/: action_servers.launch.py  avalue_rrt_slam.launch.py  rrt_assigner.launch.py  rrt_exploration.launch.py  visual_slam_start.py
avalue_robot_rrt2/src/: find_robot_action_server.cpp  pick_robot_action_server.cpp  robot_picker.cpp  robot_pose_publisher.cpp
avalue_robot_rrt2/src/bt_plugins/: approach_coloured_box.cpp  find_coloured_box.cpp  pick_coloured_box.cpp
avalue_robot_rrt2/src/rrt_exploration/: assigner.cpp  filter.cpp  global_rrt.cpp  local_rrt.cpp  mean_shift.cpp  mtrand.cpp  robot.cpp  utils.cpp  wait_for_fin.cpp
avalue_robot_rrt2/src/rrt_exploration/include/: mean_shift.h  mtrand.h  robot.hpp  utils.h
avalue_robot_rtab/: CMakeLists.txt  package.xml
avalue_robot_rtab/launch/: avalue_nav2_rtab.launch.py  avalue_nav2_rtab_pure3d.launch.py  avalue_slam_rtab.launch.py  avalue_slam_rtab_pure3d.launch.py
avalue_robot_rtab/params/: rtabmap_nav_params.yaml  rtabmap_nav_params_pure3d.yaml
avalue_robot_slam/avalue_cartographer/: CMakeLists.txt  package.xml
avalue_robot_slam/avalue_slam_toolbox/: CMakeLists.txt  package.xml
avalue_robot_slam/slam_gmapping/: package.xml
avalue_robot_urdf/avalue_robot_urdf/: CMakeLists.txt  package.xml
avalue_robot_urdf/avalue_robot_urdf/urdf/: S100_diff_robot.urdf  brushless_senior_diff.urdf  flagship_4wd_bs_robot.urdf  flagship_4wd_dl_robot.urdf  flagship_mec_bs_robot.urdf  flagship_mec_dl_robot.urdf  four_wheel_diff_bs_robot.urdf  four_wheel_diff_dl_robot.urdf  mini_4wd_moveit_four.urdf  mini_4wd_robot.urdf  mini_akm_robot.urdf  mini_diff_robot.urdf  mini_mec_moveit_four.urdf  mini_mec_moveit_six.urdf  mini_mec_robot.urdf  mini_omni_robot.urdf  mini_tank_moveit_four.urdf  mini_tank_robot.urdf  r3S_4wd_robot.urdf  r3s_mec_robot.urdf  s300_mini_robot.urdf  s300_yw_robot.urdf  senior_4wd_bs_robot.urdf  senior_4wd_dl_robot.urdf  senior_akm_robot.urdf  senior_diff_robot.urdf  senior_mec_bs_robot.urdf  senior_mec_dl_robot.urdf  senior_omni_robot.urdf  top_4wd_bs_robot.urdf  top_4wd_dl_robot.urdf  top_akm_bs_robot.urdf  top_akm_dl_robot.urdf  top_mec_EightDrive_robot.urdf  top_mec_bs_robot.urdf  top_mec_dl_robot.urdf  top_omni_robot.urdf
avalue_rrt_msg/: CMakeLists.txt  package.xml
avalue_rviz2/: CMakeLists.txt  package.xml
nav2_waypoint_cycle/: package.xml
not_included/not_supported_packages/avalue_multi/: CMakeLists.txt  cmd.py  not_supported_reasons.txt  package.xml
not_included/not_supported_packages/avalue_multi/launch/: avalue_slave.launch.py  navigation.launch.py
not_included/not_supported_packages/avalue_multi/scripts/: avalue_keyboard.py  leadercar.sh  listen_tfodom.py  send_tfodom.py  slavecar.sh
not_included/not_supported_packages/avalue_multi/src/: multi_avoidance.cpp  slave_tf_listener.cpp
reference/: CreateMAP.desktop  FollowWaypointsClick.desktop  RVIZ2-MAP.desktop  SaveMAP.desktop  StartNavigation.desktop  avalue_udev.sh  erase_ros_log.sh  follow_waypoints_click.py  realsense-info.sh  realsense.service  ros2-stack.target  ros2_humble_env.sh  rosbridge.service  run_create_map.sh  run_rviz2_map.sh  run_save_map.sh  run_start_navigation.sh  sllidar.service  turn_on_avalue_robot.service  yesense.service
simple_follower_ros2/: package.xml  setup.py
simple_follower_ros2/launch/: adjust_hsv.launch.py  aruco_follower.launch.py  laser_follower.launch.py  line_follower.launch.py  visual_follower.launch.py
simple_follower_ros2/simple_follower_ros2/: ar_follow.py  laserTracker.py  laserfollower.py  visualFollower.py  visualTracker.py
tts_make_ros2/: package.xml
turn_on_avalue_robot/: CMakeLists.txt  package.xml
ultralytics_ros2/: package.xml  setup.cfg  setup.py
(+1082 files in other folders)
