<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avalue_robot_rrt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="powrbv@gmail.com">avalue</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages / TF -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Nav2 / BT -->
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>

  <!-- Filters / laser -->
  <depend>filters</depend>
  <depend>laser_geometry</depend>

  <!-- Custom msgs -->
  <depend>avalue_rrt_msg</depend>

  <!-- OpenCV bridge (OpenCV itself is a system dep handled via rosdep/apt) -->
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

