<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_follower_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 simple_follower_ros2 for avalue_robot</description>
  <maintainer email="renity.support@renity.com.tw">Avalue Technology Inc.</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>turn_on_avalue_robot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

