<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avalue_multi</name>
  <version>0.0.0</version>
  <description>ROS2 avalue_multi for avalue_robot</description>
  <maintainer email="renity.support@renity.com.tw">Avalue Technology Inc.</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>turn_on_avalue_robot</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>avalue_multi_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>turn_on_avalue_robot</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


